# firstAPI

./: crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2024_09_11_1335-488005375fcf_create_products_table.py  2024_09_11_1425-c64345385c87_create_users_table.py  2024_09_11_1437-6e932b8ae8c1_create_posts_table.py  2024_09_11_1510-0bb8e7494310_create_profile_table.py  2024_09_16_0134-7395b4f8cdfb_create_test.py  2024_09_16_0156-e939ffb60d9b_create_order_product_association_table.py  2024_09_18_2337-f6ca7d7b4973_add_count_column_in_order_product_.py  2024_09_19_0044-4aa08f4fac86_add_unit_price_column_in_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: crud.py  demo_jwt_auth.py  helpers.py  validation.py  views.py
api_v1/products/: crud.py  dependencies.py  views.py
auth/: utils.py
core/: config.py
core/models/: __init__.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py
users/: schemas.py
